package model;

import java.io.Serializable;

public enum Categoria implements Serializable {
    Festa,
    Esporte,
    Show,
    Outro
}